FP-313:
* Improved README
* Improved paraent/reactor pom.xml by adding plugin and dependency management, defining commonly used versions as properties ...
* Adapted other pom.xml files to use the definitions in the parent/reactor